--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header class="page-header">
-            <a class="page-header__logo">
+            <a href="./index.html" class="page-header__logo">
                 <svg class="page-header__logo-img page-header__logo-img--desktop" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="147"
                     height="40" viewBox="0 0 147 40">
                     <image id="logotype-white-desktop.svg" width="147" height="40"
@@ -29,7 +29,7 @@
                     </button>
                     <ul class="main-nav__list">
                         <li class="main-nav__list-item"> <a class="main-nav__link" href="#"> Главная</a></li>
-                        <li class="main-nav__list-item"> <a class="main-nav__link" href="#">Фотографии</a> </li>
+                        <li class="main-nav__list-item"> <a class="main-nav__link" href="./photo.html">Фотографии</a> </li>
                         <li class="main-nav__list-item"> <a class="main-nav__link" href="#"> Конкурс</a></li>
                         <li class="main-nav__list-item"> <a class="main-nav__link" href="#">HTML Academy</a> </li>
                     </ul>
