--- a/src/photo.html
+++ b/src/photo.html
@@ -63,7 +63,8 @@
                 <div class="users-photo__wrp">
                 <div class="users-photo__item">
                     <picture>
-                        <source media="(min-width: 1200px)" srcset="./img/photo-1-desktop.webp" >
+                        <source media="(min-width: 1200px)" srcset="./img/photo-1-desktop.webp">
+                        <source media="(min-width: 660px)" srcset="./img/photo-1-desktop.webp">
                       <img src="./img/photo-1-mobile.webp" alt="" class="users-photo__item-img">
                      </picture>  
                     <div class="photo-info">
@@ -73,32 +74,75 @@
                         </p>
                         <button class="photo-info__like button-like"> Нравится: 356</button>
                     </div>
-                </div>  <div class="users-photo__item">
+                </div>  
+                <div class="users-photo__item">
                     <picture>
-                        <source media="(min-width: 1200px)" srcset="./img/photo-1-desktop.webp" >
-                      <img src="./img/photo-1-mobile.webp" alt="" class="users-photo__item-img">
+                        <source media="(min-width: 1200px)" srcset="./img/photo-2-desktop.webp">
+                        <source media="(min-width: 660px)" srcset="./img/photo-2-desktop.webp">
+                      <img src="./img/photo-2-mobile.webp" alt="" class="users-photo__item-img">
                      </picture>  
                     <div class="photo-info">
-                        <p class="photo-info__author">Левон <span class="photo-info__timer"> (5 часов назад)</span></p>
-
+                        <p class="photo-info__author">Антон <span class="photo-info__timer"> (12 часов назад)</span></p>
                         <p class="photo-info__text">
-                            Вчера он на луну летал, сегодня в руки к нам попал.
+                            Соседи будут рады!
                         </p>
-                        <button class="photo-info__like button-like"> Нравится: 356</button>
+                        <button class="photo-info__like button-like"> Нравится: 666</button>
                     </div>
                 </div>
                 <div class="users-photo__item">
                     <picture>
-                        <source media="(min-width: 1200px)" srcset="./img/photo-1-desktop.webp" >
-                      <img src="./img/photo-1-mobile.webp" alt="" class="users-photo__item-img">
+                        <source media="(min-width: 1200px)" srcset="./img/photo-3-desktop.webp">
+                        <source media="(min-width: 660px)" srcset="./img/photo-3-desktop.webp">
+                      <img src="./img/photo-3-mobile.webp" alt="" class="users-photo__item-img">
                      </picture>  
                     <div class="photo-info">
-                        <p class="photo-info__author">Левон <span class="photo-info__timer"> (5 часов назад)</span></p>
-
+                        <p class="photo-info__author">Борис <span class="photo-info__timer"> (20 часов назад)</span></p>
                         <p class="photo-info__text">
-                            Вчера он на луну летал, сегодня в руки к нам попал.
+                            Здесь могла быть ваша цитата о высоком и вечном.
                         </p>
-                        <button class="photo-info__like button-like"> Нравится: 356</button>
+                        <button class="photo-info__like button-like"> Нравится: 215</button>
+                    </div>
+                </div>
+                <div class="users-photo__item">
+                    <picture>
+                        <source media="(min-width: 1200px)" srcset="./img/photo-4-desktop.webp">
+                        <source media="(min-width: 660px)" srcset="./img/photo-4-desktop.webp">
+                      <img src="./img/photo-4-mobile.webp" alt="" class="users-photo__item-img">
+                     </picture>  
+                    <div class="photo-info">
+                        <p class="photo-info__author">Сергей <span class="photo-info__timer"> (25 часов назад)</span></p>
+                        <p class="photo-info__text">
+                            Самая кубанская в мире!
+                        </p>
+                        <button class="photo-info__like button-like"> Нравится: 4</button>
+                    </div>
+                </div>
+                <div class="users-photo__item">
+                    <picture>
+                        <source media="(min-width: 1200px)" srcset="./img/photo-5-desktop.webp">
+                        <source media="(min-width: 660px)" srcset="./img/photo-5-desktop.webp">
+                      <img src="./img/photo-5-mobile.webp" alt="" class="users-photo__item-img">
+                     </picture>  
+                    <div class="photo-info">
+                        <p class="photo-info__author">Сергей <span class="photo-info__timer"> (25 часов назад)</span></p>
+                        <p class="photo-info__text">
+                            Где снег-то?
+                        </p>
+                        <button class="photo-info__like button-like"> Нравится: 150</button>
+                    </div>
+                </div>
+                <div class="users-photo__item">
+                    <picture>
+                        <source media="(min-width: 1200px)" srcset="./img/photo-6-desktop.webp">
+                        <source media="(min-width: 660px)" srcset="./img/photo-6-desktop.webp">
+                      <img src="./img/photo-6-mobile.webp" alt="" class="users-photo__item-img">
+                     </picture>  
+                    <div class="photo-info">
+                        <p class="photo-info__author">Надежда <span class="photo-info__timer"> (40 часов назад)</span></p>
+                        <p class="photo-info__text">
+                            Всем GM и взаимные лайки!
+                        </p>
+                        <button class="photo-info__like button-like"> Нравится: 256</button>
                     </div>
                 </div>
                 </div>
